# alx-low_level_programming

./: CMakeLists.txt  README.md  main.c
0x00-hello_world/: 4-puts.c  5-printf.c  6-size.c  README.md
0x01-variables_if_else_while/: 0-positive_or_negative.c  1-last_digit.c  2-print_alphabet.c  3-print_alphabets.c  4-print_alphabt.c  5-print_numbers.c  6-print_numberz.c  7-print_tebahpla.c  8-print_base16.c  9-print_comb.c  README.md
0x02-functions_nested_loops/: 0-putchar.c  1-alphabet.c  8-24_hours.c  9-times_table.c  README.md
0x03-debugging/: 1-main.c  README.md
0x04-more_functions_nested_loops/: 0-isupper.c  1-isdigit.c  101-print_number.c  2-mul.c  3-print_numbers.c  4-print_most_numbers.c  5-more_numbers.c  6-print_line.c  7-print_diagonal.c  9-fizz_buzz.c  README.md  main.h
0x05-pointers_arrays_strings/: 0-reset_to_98.c  101-keygen.c  2-strlen.c  4-print_rev.c  6-puts2.c  7-puts_half.c  main.c
0x06-pointers_arrays_strings/: 100-rot13.c  101-print_number.c  102-magic.c  README.md
0x07-pointers_arrays_strings/: README.md  main.c  main.h
0x08-recursion/: 0-puts_recursion.c  1-print_rev_recursion.c  2-strlen_recursion.c  3-factorial.c  4-pow_recursion.c  5-sqrt_recursion.c  6-is_prime_number.c  README.md
0x09-static_libraries/: 0-memset.c  1-strncat.c  100-atoi.c  2-strncpy.c  3-puts.c  README.md  create_static_lib.sh  main.h
0x0A-argc_argv/: README.md
0x0B-malloc_free/: 1-strdup.c  3-alloc_grid.c  README.md  main.h
0x0C-more_malloc_free/: README.md
0x0D-preprocessor/: README.md
0x0E-structures_typedef/: 1-init_dog.c  2-print_dog.c  4-new_dog.c  README.md  dog.h
(+8 files in other folders)
